# opengl-font-rendering

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  text_renderer.cpp
include/: filesystem.h  shader.h  text_renderer.h
